db.yaml
#Define a Service to expose the MongoDB instance
apiVersion: v1
kind: Service
metadata:
  name: db-svc  # Name of the service
  namespace: shwe  # Namespace where the service will be created
spec:
  clusterIP: None
  selector:
    app: db  # Select pods with the label 'app: db'
  ports:
  - port: 27017  # Port that the service listens on
    targetPort: 27017 # Port that the service forwards traffic to
        #not a web app or a http app so using same value for port and target port
  type: ClusterIP
