spring.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring
  namespace: shwe # Added namespace where the deployment will be created
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring
  template:
    metadata:
      labels:
        app: spring
    spec:
      containers:
      - name: spring
        image: dockerhandson/spring-boot-mongo:1   #use shwetha12712712/spring-boot-mongo-docker image if you want to provide db port dynamically, bcox in the dockerhandson image port is hardcoded
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spring-svc
  namespace: shwe
spec:
  # type: NodePort
  selector:
    app: spring
  ports:
  - port: 80
    targetPort: 8080
